test(backend): update and extend coverage across backend modules